--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,7 @@ thiserror = "2.0"
 tempfile = "3.0"
 
 # Async runtime
-tokio = { version = "1.0", features = ["fs", "macros"] }
+tokio = { version = "1.0", features = ["fs", "macros", "rt", "rt-multi-thread"] }
 futures-util = "0.3"
 
 # Logging (structured)
