chore(cache): preserve ffprobe-derived fields by suppressing dead-code warning
Keep VideoMetadata.width/height available for future video-processing logic and silence unused-field warnings.

--- a/container-data/Containerfile
+++ b/container-data/Containerfile
@@ -1,14 +1,15 @@
 # # # # # # # # # # # # # # # # # # # #
 # Builder
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
-FROM docker.io/messense/rust-musl-cross:x86_64-musl as builder
+FROM docker.io/messense/rust-musl-cross:x86_64-musl AS builder
 
 # Set working directory and create empty directory in one layer
 WORKDIR /app
 RUN mkdir "/empty_dir"
 
 # Copy source code
-COPY ../Cargo.toml ../Cargo.lock ./
+COPY ../Cargo.toml ./
+COPY ../Cargo.lock ./
 COPY ../src ./src
 COPY ../static ./static
 
