--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,7 @@ edition = "2021"
 
 [dependencies]
 # Web framework
-actix-web = "4.11"
-actix-multipart = "0.7"
+warp = { version = "0.4.2", features = ["server", "multipart"] }
 
 # Database
 rusqlite = { version = "0.37", features = ["bundled"] }
@@ -35,7 +34,7 @@ tempfile = "3.0"
 rayon = "1.8"
 
 # Async runtime
-tokio = { version = "1.0", features = ["fs", "macros", "rt", "rt-multi-thread"] }
+tokio = { version = "1.0", features = ["fs", "macros", "rt", "rt-multi-thread", "signal"] }
 futures-util = "0.3"
 
 # Logging (structured)
