--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ sha2 = "0.10"
 chrono = { version = "0.4", features = ["serde"] }
 thiserror = "2.0"
 rayon = "1.8"
+num_cpus = "1.16"
 
 # Async runtime
 tokio = { version = "1.0", features = ["fs", "macros", "rt", "rt-multi-thread", "signal"] }
