--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,16 @@ clokwerk = "0.4"
 image = { version = "0.25", default-features = false, features = ["rayon", "bmp", "gif", "hdr", "jpeg", "png", "pnm", "qoi", "tga", "tiff", "webp"] }
 kamadak-exif = "0.6"
 
+# ML model for semantic search
+candle-core = "0.9.1"
+candle-nn = "0.9.1"
+candle-transformers = "0.9.1"
+hf-hub = "0.4.3"
+tokenizers = "0.22.1"
+sqlite-vec = "0.1.7-alpha.2"
+zerocopy = "0.8"
+anyhow = "1.0"
+
 # Serialization
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
