--- a/package.json
+++ b/package.json
@@ -8,12 +8,20 @@
     "format": "prettier --write static/**/*.{js,css}",
     "format:check": "prettier --check static/**/*.{js,css}",
     "lint": "npm run lint:js && npm run lint:css",
-    "lint:js": "eslint static/**/*.js",
-    "lint:css": "stylelint static/**/*.css"
+    "lint:js": "eslint --no-warn-ignored static/**/*.js",
+    "lint:js:fix": "eslint --no-warn-ignored --fix static/**/*.js",
+    "lint:css": "stylelint static/**/*.css",
+    "lint:css:fix": "stylelint --fix static/**/*.css",
+    "lint:fix": "npm run lint:js:fix && npm run lint:css:fix && npm run format",
+    "prepare": "simple-git-hooks"
+  },
+  "simple-git-hooks": {
+    "pre-commit": "npm run format:check && npm run lint"
   },
   "devDependencies": {
     "eslint": "^9.0.0",
     "prettier": "^3.0.0",
+    "simple-git-hooks": "^2.13.1",
     "stylelint": "^16.0.0",
     "stylelint-config-standard": "^36.0.0"
   },
