--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ fast-blurhash = "1.0"
 candle-core = "0.9.1"
 candle-nn = "0.9.1"
 candle-transformers = "0.9.1"
-hf-hub = "0.4.3"
+hf-hub = { version = "0.4.3", default-features = false, features = ["tokio", "ureq", "rustls-tls"] }
 tokenizers = "0.22.1"
 sqlite-vec = "0.1.7-alpha.2"
 zerocopy = "0.8"
