--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,8 +55,8 @@ env_logger = "0.11"
 [dev-dependencies]
 tempfile = "3.0"
 
-#[profile.release]
-#panic = "abort" # Strip expensive panic clean-up logic
-#codegen-units = 1 # Compile crates one after another so the compiler can optimize better
-#lto = true # Enables link to optimizations
-#strip = true # Strip debug symbols
+[profile.release]
+panic = "abort" # Strip expensive panic clean-up logic
+codegen-units = 1 # Compile crates one after another so the compiler can optimize better
+lto = true # Enables link to optimizations
+strip = true # Strip debug symbols
