--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,7 +50,7 @@ jobs:
         run: cargo test
 
       - name: Build release
-        run: cargo build --release
+        run: cargo build --profile production
 
   create-release:
     name: Create release
@@ -124,7 +124,7 @@ jobs:
           key: ${{ matrix.target }}
 
       - name: Build release binary
-        run: cargo build --release --target ${{ matrix.target }}
+        run: cargo build --profile production --target ${{ matrix.target }}
 
       - name: Rename binary with target name
         run: |
