--- a/Cargo.toml
+++ b/Cargo.toml
@@ -42,7 +42,7 @@ serde_json = "1.0"
 
 # Utilities
 sha2 = "0.10"
-chrono = { version = "0.4", features = ["serde"] }
+chrono = { version = "0.4", features = ["serde", "unstable-locales"] }
 thiserror = "2.0"
 rusttype = "0.9"
 
