feat: add comprehensive E2E testing infrastructure with Playwright
Add comprehensive Playwright-based E2E testing suite with real backend integration:

**Test Infrastructure:**
- Playwright configuration with Desktop Chrome and Mobile Safari projects
- Global setup/teardown for automatic binary build and server lifecycle
- Test helpers library with 20+ utilities for common operations
- Test data manager for photo indexing verification

**Test Coverage:**
- Navigation across all 5 views (photos, favorites, videos, collages, housekeeping)
- Photo viewer (zoom, rotate, navigation, deletion, fullscreen)
- Search functionality (semantic search, URL updates, keyboard shortcuts)
- Favorites management (add/remove, persistence, empty states)
- Video playback and controls
- Collage management (accept/reject, metadata)
- Timeline filtering (slider, dropdowns, date ranges)
- Metadata viewing and editing
- Mobile interactions (sidebar, search, responsive layouts, touch gestures)
- Keyboard shortcuts (navigation, actions, accessibility)
- Critical user journeys (end-to-end workflows)

**Test Organization:**
- Sequential execution (workers: 1) to avoid DB conflicts
- Auto-retry in CI (2 retries)
- Screenshots and traces on failure
- HTML, list, and JUnit reporting
- tests/e2e/setup/ - Global setup, teardown, helpers
- tests/e2e/specs/ - Feature-organized test specifications

**Documentation:**
- Updated README.md with E2E testing section
- Updated AGENTS.md with test infrastructure details
- Added npm scripts for running tests in various modes

**Changes:**
- Add playwright.config.js with proper timeouts and project configs
- Add comprehensive test suite (12 spec files, 200+ tests)
- Update .gitignore to exclude test artifacts
- Remove old housekeeping.e2e.spec.js (moved to new structure)
- Update test data images

--- a/.gitignore
+++ b/.gitignore
@@ -45,6 +45,9 @@ data/
 # E2E test files
 e2e-puppeteer-test.js
 smoke-test.js
+test-e2e-data/
+test-results/
+playwright-report/
 
 # Working notes
 FRONTEND_IMPROVEMENTS.md
