--- a/package.json
+++ b/package.json
@@ -17,6 +17,14 @@
     "lint:css": "stylelint \"static/**/*.css\"",
     "lint:css:fix": "stylelint --fix \"static/**/*.css\"",
     "lint:fix": "npm run lint:js:fix && npm run lint:css:fix && npm run format",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:chrome": "playwright test --project='Desktop Chrome'",
+    "test:e2e:mobile": "playwright test --project='Mobile Safari'",
+    "test:e2e:report": "playwright show-report",
+    "pretest:e2e": "npm run lint && npm run format:check",
     "prepare": "simple-git-hooks"
   },
   "simple-git-hooks": {
