fix: resolve ESLint errors and correct dependency placement
**Fixes:**
1. Add Node.js globals (process, __dirname, etc.) to ESLint config for test files
2. Move @playwright/test from dependencies to devDependencies

**Changes:**
- eslint.config.js: Add Node.js globals to tests/**/*.js configuration
- package.json: Move @playwright/test to devDependencies (alphabetically sorted)

All linting now passes successfully.

--- a/package.json
+++ b/package.json
@@ -31,13 +31,11 @@
     "pre-commit": "npm run format:check && npm run lint"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.1",
     "eslint": "^9.0.0",
     "prettier": "^3.0.0",
     "simple-git-hooks": "^2.13.1",
     "stylelint": "^16.0.0",
     "stylelint-config-standard": "^39.0.0"
-  },
-  "dependencies": {
-    "@playwright/test": "^1.55.1"
   }
 }
