--- a/package.json
+++ b/package.json
@@ -17,19 +17,22 @@
     "lint:css": "stylelint \"static/**/*.css\"",
     "lint:css:fix": "stylelint --fix \"static/**/*.css\"",
     "lint:fix": "npm run lint:js:fix && npm run lint:css:fix && npm run format",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
     "prepare": "simple-git-hooks"
   },
   "simple-git-hooks": {
     "pre-commit": "npm run format:check && npm run lint"
   },
   "devDependencies": {
+    "@playwright/test": "^1.57.0",
     "eslint": "^9.0.0",
     "prettier": "^3.0.0",
     "simple-git-hooks": "^2.13.1",
     "stylelint": "^16.0.0",
     "stylelint-config-standard": "^39.0.0"
-  },
-  "dependencies": {
-    "@playwright/test": "^1.55.1"
   }
 }
