--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ rusttype = "0.9"
 anyhow = "1.0"
 
 # Async runtime
-tokio = { version = "1.0", features = ["fs", "macros", "rt", "rt-multi-thread", "signal"] }
+tokio = { version = "1.0", features = ["fs", "macros", "process", "rt", "rt-multi-thread", "signal"] }
 
 # Logging
 log = "0.4"
